--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --rs --cls --ignore-watch node_modules src/server.ts",
-    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm": "typeorm-ts-node-commonjs -d ./src/data-source.ts",
     "test": "cross-env NODE_ENV=test SECRET_KEY=secret_key jest --verbose --runInBand"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
-    "@types/supertest": "^2.0.12",
-    "jest": "^28.1.2",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.15",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "eslint": "^8.29.0",
     "sqlite3": "^5.0.8",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.5",
+    "ts-node": "^10.9.1",
+    "@types/pg": "^8.6.6",
+    "@types/pg-format": "^1.0.2",
+    "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
@@ -27,6 +37,12 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "pg-format": "^1.0.4",
+    "zod": "^3.21.4"
   }
 }
